# lisette

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  lefthook.yaml  release-plz.toml  rust-toolchain.toml
crates/cli/: Cargo.toml  agents_template.md
crates/cli/src/: command.rs  go_cli.rs  lock.rs  main.rs  output.rs  pipeline.rs  typedef_regen.rs  workspace.rs
crates/cli/src/handlers/: add.rs  bindgen.rs  build.rs  check.rs  completions.rs  doc.rs  format.rs  help.rs  learn.rs  lsp.rs  mod.rs  new.rs  run.rs  sync.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: diagnostic.rs  emit.rs  infer.rs  lib.rs  lint.rs  module_graph.rs  result.rs  sink.rs
crates/emit/: Cargo.toml
crates/emit/src/: bindings.rs  collectors.rs  imports.rs  lib.rs  output.rs  queries.rs  utils.rs
crates/emit/src/calls/: dispatch.rs  mod.rs  native.rs  regular.rs  ufcs.rs
crates/emit/src/control_flow/: branching.rs  fallible.rs  loops.rs  mod.rs  propagation.rs  select.rs
crates/emit/src/definitions/: enum_layout.rs  enums.rs  functions.rs  impls.rs  interface_adapter.rs  interfaces.rs  mod.rs  structs.rs  tags.rs  toplevel.rs
crates/emit/src/expressions/: dot_classify.rs  identifiers.rs  literals.rs  mod.rs  operators.rs  staging.rs  values.rs
crates/emit/src/go/: collectors.rs  utils.rs
crates/emit/src/names/: generics.rs  go_name.rs  mod.rs  resolution.rs
crates/emit/src/patterns/: bindings.rs  decision_tree.rs  matching.rs  mod.rs  tree_emitter.rs
crates/emit/src/statements/: assignments.rs  let_bindings.rs  mod.rs
crates/emit/src/types/: abi.rs  coercion.rs  emitter.rs  go_type.rs  mod.rs  native.rs  prelude.rs
crates/format/: Cargo.toml
crates/format/src/: comments.rs  formatter.rs
crates/format/src/formatter/: expression.rs  top_level_item.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: analysis.rs  completion.rs  definition.rs  hover.rs  lib.rs  signature_help.rs  snapshot.rs  state.rs  traversal.rs
crates/semantics/: Cargo.toml
crates/semantics/src/: analyze.rs  call_classification.rs  diagnostics.rs  facts.rs  lib.rs  prelude.rs  store.rs
crates/semantics/src/cache/: go_stdlib.rs  mod.rs  prelude.rs  types.rs
crates/semantics/src/checker/: freeze.rs  mod.rs  scopes.rs  type_env.rs
crates/semantics/src/lint/: fact_lints.rs
crates/semantics/src/module_graph/: mod.rs
crates/semantics/src/passes/: deferred.rs  mod.rs
crates/semantics/src/pattern_analysis/: inhabitance.rs  mod.rs  normalize.rs  witness.rs
crates/semantics/src/validators/: duplicate_bindings.rs  enum_variant_value.rs  generics.rs  irrefutable_patterns.rs  lints.rs  mod.rs  native_value_usage.rs  newtype.rs  post_inference.rs  prelude_shadowing.rs  receivers.rs  stringer_signature.rs  temp_producing.rs  unused_expressions.rs  visibility.rs
playground/wasm/: Cargo.toml  build.rs
playground/wasm/src/: lib.rs
tests/: Cargo.toml  e2e_suite.rs  emit_runtime.rs  emit_runtime_harness.rs  emit_runtime_skip.txt  lsp.rs  lsp_harness.rs
tests/_harness/: build.rs  builders.rs  infer.rs  lint.rs  mod.rs  pipeline.rs
tests/e2e/src/: main.lis
tests/e2e_smoke_project/: lisette.toml
tests/e2e_smoke_project/src/: main.lis
tests/e2e_suite/: harness.rs  skip.txt
tests/spec/: e2e_smoke.rs  mod.rs  sync.rs
tests/spec/desugar/snapshots/: pipeline_as_return.snap  pipeline_chained.snap  pipeline_chained_with_partial_application.snap  pipeline_in_block.snap  pipeline_in_format_string.snap  pipeline_in_let.snap  pipeline_multiple_in_function.snap  pipeline_nested_calls.snap  pipeline_partial_application_multiple_args.snap  pipeline_preserves_other_operators.snap  pipeline_simple.snap  pipeline_triple_chained.snap  pipeline_with_arithmetic.snap  pipeline_with_parens.snap  pipeline_with_partial_application.snap
tests/spec/emit/: control_flow.rs  expressions.rs  functions.rs  go_interface_adapter.rs  imports.rs  interop_matrix.rs  literals.rs  mod.rs  partial.rs  patterns.rs  prelude.rs  result_option_patterns.rs  types.rs
tests/spec/emit/snapshots/: assoc_fn_returning_option_self.snap  auto_address_empty_struct_literal_receiver.snap  auto_address_parenthesized_struct_literal_receiver.snap  auto_address_struct_literal_receiver.snap  binary_logical_and_short_circuits_rhs_with_setup.snap  binary_logical_or_short_circuits_rhs_with_setup.snap  blocking_receive.snap  blocking_send.snap  cast_rune_to_string.snap  cast_to_aliased_go_interface_resolves_through_alias.snap  chained_option_construction.snap  chained_propagate_option.snap  channel_split.snap  channel_split_destructure.snap  coercion_in_map_value_via_indexed_assignment.snap  coercion_in_match_arm_value.snap  coercion_in_match_arm_via_typed_let.snap  coercion_in_struct_literal_field.snap  coercion_in_tail_return_position.snap  coercion_in_typed_let_binding.snap  const_reference_to_const_stays_const.snap  discarded_tail_call_to_go_builtin_uses_underscore.snap  e2e.snap  e2e_smoke.snap  emit_or_capture_range_temp_var_no_collision.snap  enum_tuple_variant_with_fn_type.snap  enum_user_pascal_string_method_suppresses_auto_stringer.snap  enum_variant_construction_with_data.snap  enumerated_slice_find.snap  err_with_errors_new.snap  for_bytes_loop_captures_mutated_receiver.snap  for_bytes_zero_alloc.snap  for_runes_zero_alloc.snap  format_string_escaped_quote_before_interp.snap  generic_call_with_named_function_alias_arg.snap  generic_return_only_type_param.snap  generic_struct_function_field_or_pattern.snap  go_call_result_as_tail_expression.snap  go_callback_result_adaptation.snap  go_fn_value_if_binding_wrapping.snap  (+254 more)
tests/spec/format/: mod.rs
tests/spec/format/snapshots/: binary_pipeline.snap  binary_pipeline_single.snap  binary_pipeline_with_comment.snap  call_with_leading_args_and_spread_arg.snap  call_with_spread_arg.snap  doc_comment_on_enum_variant.snap  (+17 more)
tests/spec/graph/: mod.rs
tests/spec/infer/: basics.rs  control_flow.rs  equality.rs  functions.rs  try.rs  types.rs
tests/spec/lex/: mod.rs
tests/spec/parse/: mod.rs
tests/spec/pattern_analysis/: mod.rs
tests/ui/errors/: mod.rs
tests/ui/lint/: mod.rs
(+952 files in other folders)
