[workspace]
resolver = "2"
exclude = ["editors/zed", "playground/wasm"]
members = [
    "crates/semantics",
    "crates/cli",
    "crates/syntax",
    "crates/diagnostics",
    "crates/format",
    "crates/emit",
    "crates/stdlib",
    "crates/deps",
    "crates/lsp",
    "tests",
]

[workspace.package]
version = "0.1.20"
edition = "2024"
rust-version = "1.94"
license = "MIT"
authors = ["Iván Ovejero <ivov.src@gmail.com>"]
repository = "https://github.com/ivov/lisette"
homepage = "https://lisette.run"
description = "Little language inspired by Rust that compiles to Go"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "7.6", default-features = false, features = ["fancy-no-backtrace"] }
owo-colors = "4.0"
insta = "1.39.0"
ecow = "0.2"
rustc-hash = "2"

[profile.dev]
split-debuginfo = "unpacked"
debug = "line-tables-only"

[profile.dev.build-override]
opt-level = 3

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = "debuginfo"
