[package]
name = "lisette-emit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false
test = false

[dependencies]
syntax = { package = "lisette-syntax", version = "0.1.22", path = "../syntax" }
ecow.workspace = true
rustc-hash.workspace = true
