[package]
name = "lisette-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false
test = false

[dependencies]
syntax = { package = "lisette-syntax", version = "0.2.1", path = "../syntax" }
unicode-segmentation = "1.11"
