[package]
name = "lisette-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false
test = false

[dependencies]
syntax = { package = "lisette-syntax", version = "0.1.20", path = "../syntax" }
semantics = { package = "lisette-semantics", version = "0.1.20", path = "../semantics" }
diagnostics = { package = "lisette-diagnostics", version = "0.1.20", path = "../diagnostics" }
deps = { package = "lisette-deps", version = "0.1.20", path = "../deps" }
format = { package = "lisette-format", version = "0.1.20", path = "../format" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
miette.workspace = true
rustc-hash.workspace = true
