[package]
name = "lisette-semantics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
syntax = { package = "lisette-syntax", version = "0.2.2", path = "../syntax", features = ["serde"] }
diagnostics = { package = "lisette-diagnostics", version = "0.2.2", path = "../diagnostics" }
stdlib = { package = "lisette-stdlib", version = "0.2.2", path = "../stdlib" }
deps = { package = "lisette-deps", version = "0.2.2", path = "../deps" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
ecow = "0.2"
rustc-hash.workspace = true
rayon.workspace = true

