[package]
name = "lisette-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for the Lisette compiler"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
rustc-hash = "2"
ecow = "0.2"

# Lisette compiler crates (git dependency – entire workspace)
lisette-format      = { git = "https://github.com/ivov/lisette", package = "lisette-format" }
lisette-syntax      = { git = "https://github.com/ivov/lisette", package = "lisette-syntax" }
lisette-semantics   = { git = "https://github.com/ivov/lisette", package = "lisette-semantics" }
lisette-emit        = { git = "https://github.com/ivov/lisette", package = "lisette-emit" }
lisette-diagnostics = { git = "https://github.com/ivov/lisette", package = "lisette-diagnostics" }
lisette-deps        = { git = "https://github.com/ivov/lisette", package = "lisette-deps" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
